[project]
name = "tiktok-reddit-mcp"
version = "0.1.0"
description = "A MCP server to download TikTok videos and post them to Reddit."
authors = [{name = "cloph-dsp"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "praw",
    "fastmcp",
    "requests",
    "mcpo",
    "python-dotenv",
    "yt-dlp",
    "faster-whisper",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/server.py",
    "/reddit_service.py",
    "/video_service.py",
    "/transcription_service.py",
    "/exceptions.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/server.py"]
